--- a/vue-order/package.json
+++ b/vue-order/package.json
@@ -10,8 +10,10 @@
     "lint": "eslint --ext .js,.vue src"
   },
   "dependencies": {
+    "stylus": "^0.54.5",
     "vue": "^2.2.2",
-    "vue-router": "^2.2.0"
+    "vue-router": "^2.2.0",
+    "vue-resource": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
@@ -26,6 +28,7 @@
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
+    "stylus-loader": "^3.0.1",
     "eslint": "^3.14.1",
     "eslint-friendly-formatter": "^2.0.7",
     "eslint-loader": "^1.6.1",
