--- a/vue-order/package.json
+++ b/vue-order/package.json
@@ -13,7 +13,8 @@
     "stylus": "^0.54.5",
     "vue": "^2.2.2",
     "vue-router": "^2.2.0",
-    "vue-resource": "^1.2.1"
+    "vue-resource": "^1.2.1",
+    "better-scroll": "^0.1.15"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
